# xlsx-ops

./: .env.example  .gitignore  25SMレポート15栄養.xlsx  AGENTS.md  README.md  custom_operation.py  main.py  pyproject.toml  xlsx_to_csv.py  xlsx_to_md.py
input/: example.xlsx
